--- a/packages/admin-ui/ui/public/locales/kn/translation.json
+++ b/packages/admin-ui/ui/public/locales/kn/translation.json
@@ -1242,161 +1242,161 @@
   "swap-calculated-at-checkout": "ಚೆಕೌಟ್‌ನಲ್ಲಿ ಲೊಕೆ೗ಟ್ ಮಾಡಲಾಗಿದೆ",
   "swap-estimated-difference": "ಅಂದಾಜಿಸಲಾದ ವ್ಯತ್ಯಯ",
   "swap-send-notifications": "ಅಧಿಸೂಚನೆಗಳನ್ನು ಕಳುಹಿಸು",
-  "swap-if-unchecked-the-customer-will-not-receive-communication-about-this-exchange": "If unchecked the customer will not receive communication about this exchange",
-  "swap-complete": "Complete",
-  "templates-shipped": "Shipped",
-  "templates-fulfilled": "Fulfilled",
-  "templates-canceled": "Canceled",
-  "templates-partially-fulfilled": "Partially fulfilled",
-  "templates-fulfillment-status-requires-action": "Requires Action",
-  "templates-awaiting-fulfillment": "Awaiting fulfillment",
-  "templates-partially-shipped": "Partially Shipped",
-  "templates-cancel-fulfillment-heading": "Cancel fulfillment?",
-  "templates-are-you-sure-you-want-to-cancel-the-fulfillment": "Are you sure you want to cancel the fulfillment?",
-  "templates-successfully-canceled-swap": "Successfully canceled swap",
-  "templates-error": "Error",
-  "templates-successfully-canceled-claim": "Successfully canceled claim",
-  "templates-successfully-canceled-fulfillment": "Successfully canceled fulfillment",
-  "templates-fulfillment-has-been-canceled": "Fulfillment has been canceled",
-  "templates-fulfilled-by-provider": "{{title}} Fulfilled by {{provider}}",
-  "templates-not-shipped": "Not shipped",
-  "templates-tracking": "Tracking",
-  "templates-shipped-from": "Shipped from",
-  "templates-shipping-from": "Shipping from",
-  "templates-mark-shipped": "Mark Shipped",
-  "templates-cancel-fulfillment": "Cancel Fulfillment",
-  "templates-completed": "Completed",
-  "templates-processing": "Processing",
-  "templates-requires-action": "Requires action",
-  "templates-capture-payment": "Capture payment",
-  "templates-successfully-captured-payment": "Successfully captured payment",
-  "templates-refund": "Refund",
-  "templates-total-for-swaps": "Total for Swaps",
-  "templates-refunded-for-swaps": "Refunded for Swaps",
-  "templates-refunded-for-returns": "Refunded for Returns",
-  "templates-manually-refunded": "Manually refunded",
-  "templates-net-total": "Net Total",
-  "templates-paid": "Paid",
-  "templates-awaiting-payment": "Awaiting payment",
-  "templates-payment-status-requires-action": "Requires Action",
-  "draft-orders-completed": "Completed",
-  "draft-orders-open": "Open",
-  "draft-orders-mark-as-paid": "Mark as paid",
-  "draft-orders-success": "Success",
-  "draft-orders-successfully-mark-as-paid": "Successfully mark as paid",
-  "draft-orders-error": "Error",
-  "draft-orders-successfully-canceled-order": "Successfully canceled order",
-  "draft-orders-back-to-draft-orders": "Back to Draft Orders",
-  "on-mark-as-paid-confirm-order-id": "Order #{{display_id}}",
-  "draft-orders-go-to-order": "Go to Order",
-  "draft-orders-cancel-draft-order": "Cancel Draft Order",
-  "draft-orders-draft-order": "Draft Order",
-  "draft-orders-email": "Email",
-  "draft-orders-phone": "Phone",
-  "draft-orders-amount": "Amount {{currency_code}}",
-  "draft-orders-payment": "Payment",
-  "draft-orders-subtotal": "Subtotal",
-  "draft-orders-shipping": "Shipping",
-  "draft-orders-tax": "Tax",
-  "draft-orders-total-to-pay": "Total to pay",
-  "draft-orders-payment-link": "Payment link:",
-  "draft-orders-configure-payment-link-in-store-settings": "Configure payment link in store settings",
-  "draft-orders-shipping-method": "Shipping Method",
-  "draft-orders-data": "Data",
-  "draft-orders-1-item": "(1 item)",
-  "draft-orders-customer": "Customer",
-  "draft-orders-edit-shipping-address": "Edit Shipping Address",
-  "draft-orders-edit-billing-address": "Edit Billing Address",
-  "draft-orders-go-to-customer": "Go to Customer",
-  "draft-orders-contact": "Contact",
-  "draft-orders-billing": "Billing",
-  "draft-orders-raw-draft-order": "Raw Draft Order",
-  "draft-orders-are-you-sure": "Are you sure?",
-  "draft-orders-remove-resource-heading": "Remove {{resource}}",
-  "draft-orders-remove-resource-success-text": "{{resource}} has been removed",
-  "draft-orders-this-will-create-an-order-mark-this-as-paid-if-you-received-the-payment": "This will create an order. Mark this as paid if you received the payment.",
-  "draft-orders-mark-paid": "Mark paid",
-  "draft-orders-cancel": "Cancel",
-  "draft-orders-create-draft-order": "Create draft order",
-  "edit-amount-paid": "Amount Paid",
-  "edit-new-total": "New Total",
-  "edit-difference-due": "Difference Due",
-  "edit-back": "Back",
-  "edit-save-and-go-back": "Save and go back",
-  "edit-order-edit-set-as-requested": "Order edit set as requested",
-  "edit-failed-to-request-confirmation": "Failed to request confirmation",
-  "edit-added-successfully": "Added successfully",
-  "edit-error-occurred": "Error occurred",
-  "edit-add-product-variants": "Add Product Variants",
-  "edit-edit-order": "Edit Order",
-  "edit-items": "Items",
-  "edit-add-items": "Add items",
-  "edit-filter-items": "Filter items...",
-  "edit-note": "Note",
-  "edit-add-a-note": "Add a note...",
-  "variants-table-location": " in {{location}}",
-  "edit-product": "Product",
-  "edit-in-stock": "In Stock",
-  "edit-price": "Price",
-  "edit-products": "Products",
-  "edit-search-product-variants": "Search Product Variants...",
-  "orders-success": "Success",
-  "orders-successfully-initiated-export": "Successfully initiated export",
-  "orders-error": "Error",
-  "orders-export-orders": "Export Orders",
-  "components-billing-address": "Billing Address",
-  "components-use-same-as-shipping": "Use same as shipping",
-  "components-e-g-gift-wrapping": "E.g. Gift wrapping",
-  "components-title": "Title",
-  "components-price": "Price",
-  "components-quantity": "Quantity",
-  "components-back": "Back",
-  "components-add": "Add",
-  "components-items-for-the-order": "Items for the order",
-  "components-details": "Details",
-  "components-price-excl-taxes": "Price (excl. Taxes)",
-  "components-add-custom": "Add Custom",
-  "components-add-existing": "Add Existing",
-  "components-add-products": "Add Products",
-  "components-add-custom-item": "Add Custom Item",
-  "components-choose-region": "Choose region",
-  "components-region": "Region",
-  "select-shipping-to-name": "(To {{name}})",
-  "components-attention": "Attention!",
-  "components-no-options-for-orders-without-shipping": "You don't have any options for orders without shipping. Please add one (e.g. \"In-store fulfillment\") with \"Show on website\" unchecked in region settings and continue.",
-  "components-choose-a-shipping-method": "Choose a shipping method",
-  "components-set-custom-price": "Set custom price",
-  "components-custom-price": "Custom Price",
-  "components-customer-and-shipping-details": "Customer and shipping details",
-  "components-find-existing-customer": "Find existing customer",
-  "components-email": "Email",
-  "components-choose-existing-addresses": "Choose existing addresses",
-  "components-create-new": "Create new",
-  "components-the-discount-is-not-applicable-to-the-selected-region": "The discount is not applicable to the selected region",
-  "components-the-discount-code-is-invalid": "The discount code is invalid",
-  "components-add-discount": "Add Discount",
-  "components-summer-10": "SUMMER10",
-  "components-discount": "Discount",
-  "select-shipping-code": "(Code: {{code}})",
-  "components-type": "Type",
-  "components-value": "Value",
-  "components-address": "Address",
-  "components-shipping-method": "Shipping method",
-  "components-billing-details": "Billing details",
-  "components-edit": "Edit",
-  "form-use-new-order-form-must-be-used-within-new-order-form-provider": "useNewOrderForm must be used within NewOrderFormProvider",
-  "new-order-created": "Order created",
-  "new-create-draft-order": "Create Draft Order",
-  "price-list-product-filter-created-at": "Created at",
-  "price-list-product-filter-updated-at": "Updated at",
-  "price-list-details-drawer-prompt-title": "Are you sure?",
-  "price-list-details-drawer-prompt-description": "You have unsaved changes, are you sure you want to exit?",
-  "price-list-details-notification-succes-title": "Price list updated",
-  "price-list-details-drawer-notification-success-message": "Successfully updated price list",
-  "price-list-details-drawer-notification-error-title": "An error occurred",
-  "price-list-details-drawer-title": "Edit Price List Details",
-  "price-list-details-drawer-cancel-button": "Cancel",
-  "price-list-details-drawer-save-button": "Save",
+  "swap-if-unchecked-the-customer-will-not-receive-communication-about-this-exchange": "ಯಾವನೇ ಪರಿಸ್ಥಿತಿಯನ್ನು ಅಚ್ಚುಮುಚ್ಚಿದ್ದರೆ ಗ್ರಾಹಕನಿಗೆ ಈ ಆದಾಯದ ಬಗ್ಗೆ ಪ್ರಸಾರ ಆಗುದಿಲ್ಲ",
+  "swap-complete": "ಪೂರ್ಣ",
+  "templates-shipped": "ದಿನಕ್ಕೆ ಸಮಯ",
+  "templates-fulfilled": "ಪೂರ್ಣ",
+  "templates-canceled": "ರದ್ದುಮಾಡಲಾಗಿದೆ",
+  "templates-partially-fulfilled": "ಭಾಗಶ: ಪೂರ್ಣ",
+  "templates-fulfillment-status-requires-action": "ಕ್ರಿಯೆಯನ್ನು ಬೇಡಿಸುವ ಪೂರ್ಣತೆ",
+  "templates-awaiting-fulfillment": "ಕ್ರಿಯೆಗಾಗಿ ಕಾಯುತ್ತಿದೆ",
+  "templates-partially-shipped": "ಭಾಗಶ: ದಿನಕ್ಕೆ ಸಮಯ",
+  "templates-cancel-fulfillment-heading": "ಕ್ರಿಯೆಯನ್ನು ರದ್ದುಮಾಡಲು ಅನುಮತಿಸುವಿರಾ?",
+  "templates-are-you-sure-you-want-to-cancel-the-fulfillment": "ನೀವು ಕ್ರಿಯೆಯನ್ನು ರದ್ದುಮಾಡಲು ಖಚಿತರಾ?",
+  "templates-successfully-canceled-swap": "ಯಶಸ್ವಿಯಾಗಿ ಸ್ವಾಪ್ ರದ್ದುಮಾಡಲಾಗಿದೆ",
+  "templates-error": "ತಪ್ಪು",
+  "templates-successfully-canceled-claim": "ಯಶಸ್ವಿಯಾಗಿ ದಾಖಲೆಯನ್ನು ರದ್ದುಮಾಡಲಾಗಿದೆ",
+  "templates-successfully-canceled-fulfillment": "ಯಶಸ್ವಿಯಾಗಿ ಪೂರ್ಣತೆಯನ್ನು ರದ್ದುಮಾಡಲಾಗಿದೆ",
+  "templates-fulfillment-has-been-canceled": "ಪೂರ್ಣತೆ ರದ್ದುಮಾಡಲಾಗಿದೆ",
+  "templates-fulfilled-by-provider": "{{title}} ನಿಯಮಿಸಿದ ವಡಗಗಾರ {{provider}} ಮೂಲಕ ಪೂರ್ಣಗೊಂಡಿದೆ",
+  "templates-not-shipped": "ಸಮಯ ದಿನಕ್ಕೆ",
+  "templates-tracking": "ಟ್ರ್ಯಾಕಿಂಗ್",
+  "templates-shipped-from": "ಇಲ್ಲಿಂದ ದಿನಕ್ಕೆ",
+  "templates-shipping-from": "ಇಲ್ಲಿಂದ ಶಿಪ್ಪಿಂಗ್",
+  "templates-mark-shipped": "ಶಿಪ್ ಮಾಡಲಾಗಿದೆ",
+  "templates-cancel-fulfillment": "ಪೂರ್ಣತೆಯನ್ನು ರದ್ದುಮಾಡಲಾಗಿದೆ",
+  "templates-completed": "ಪೂರ್ಣ",
+  "templates-processing": "ಪ್ರಕ್ರಿಯಿಸುತ್ತಿದೆ",
+  "templates-requires-action": "ಕ್ರಿಯೆಯನ್ನು ಬೇಡಿಸುತ್ತದೆ",
+  "templates-capture-payment": "ಪಾವತಿಯನ್ನು ಹಿಡಕೇಲಿಸಿ",
+  "templates-successfully-captured-payment": "ಯಶಸ್ವಿಯಾಗಿ ಪಾವತಿಯನ್ನು ಹಿಡಕೇಲಿಸಲಾಗಿದೆ",
+  "templates-refund": "ಪ್ರತಿಪುಷ್ಟಿ",
+  "templates-total-for-swaps": "ಸ್ವಾಪ್ಗಳ ಒಟ್ಟು",
+  "templates-refunded-for-swaps": "ಸ್ವಾಪ್ಗಳ ಪ್ರತಿಪುಷ್ಟಿಯಾಗಿದೆ",
+  "templates-refunded-for-returns": "ರಿಟರ್ನ್ಗಳ ಪ್ರತಿಪುಷ್ಟಿಯಾಗಿದೆ",
+  "templates-manually-refunded": "ಮೈಸೂರಾಲ್ಲಿ ಪ್ರತಿಪುಷ್ಟಿಯಾಗಿದೆ",
+  "templates-net-total": "ನೆಟ್ ಒಟ್ಟು",
+  "templates-paid": "ಪಾವತಿಯಾಗಿದೆ",
+  "templates-awaiting-payment": "ಪಾವತಿಗಾಗಿ ನಿರೀಕ್ಷಿಸುತ್ತದೆ",
+  "templates-payment-status-requires-action": "ಕ್ರಿಯೆಯನ್ನು ಬೇಡಿಸುತ್ತದೆ",
+  "draft-orders-completed": "ಪೂರ್ಣ",
+  "draft-orders-open": "ಖುಲಾಸಿದ",
+  "draft-orders-mark-as-paid": "ಪಾವತಿಯಾಗಿ ಗುರುತಿಸಿ",
+  "draft-orders-success": "ಯಶಸ್ವಿಯಾಗಿದೆ",
+  "draft-orders-successfully-mark-as-paid": "ಯಶಸ್ವಿಯಾಗಿ ಪಾವತಿಯಾಗಿದೆ",
+  "draft-orders-error": "ತಪ್ಪು",
+  "draft-orders-successfully-canceled-order": "ಯಶಸ್ವಿಯಾಗಿ ಆದೇಶವನ್ನು ರದ್ದುಮಾಡಲಾಗಿದೆ",
+  "draft-orders-back-to-draft-orders": "ಮತ್ತೆ ಡ್ರಾಫ್ಟ್ ಆದೇಶಗಳಿಗೆ ಹಿಂತಿರುಗಿ",
+  "on-mark-as-paid-confirm-order-id": "ಆದೇಶ #{{display_id}}",
+  "draft-orders-go-to-order": "ಆದೇಶಕ್ಕೆ ಹೋಗಿ",
+  "draft-orders-cancel-draft-order": "ಡ್ರಾಫ್ಟ್ ಆದೇಶವನ್ನು ರದ್ದುಮಾಡಲಾಗಿದೆ",
+  "draft-orders-draft-order": "ಡ್ರಾಫ್ಟ್ ಆದೇಶ",
+  "draft-orders-email": "ಇಮೇಲ್",
+  "draft-orders-phone": "ದೂರವಾಣಿ",
+  "draft-orders-amount": "ಮೊತ್ತ {{currency_code}}",
+  "draft-orders-payment": "ಪಾವತಿ",
+  "draft-orders-subtotal": "ಸಬ್ಟೋಟಲ್",
+  "draft-orders-shipping": "ಶಿಪ್ಪಿಂಗ್",
+  "draft-orders-tax": "ತೆರಿಕೆ",
+  "draft-orders-total-to-pay": "ಪಾವತಿಗಾಗಿ ಒಟ್ಟು",
+  "draft-orders-payment-link": "ಪಾವತಿ ಲಿಂಕ್:",
+  "draft-orders-configure-payment-link-in-store-settings": "ವಿಭಾಗದ ಸೆಟ್ಟಿಂಗ್ಸ್ನಲ್ಲಿ ಪಾವತಿ ಲಿಂಕ್ ಕಾನ್ಫಿಗರ್ ಮಾಡಿ",
+  "draft-orders-shipping-method": "ಶಿಪ್ಪಿಂಗ್ ವಿಧಾನ",
+  "draft-orders-data": "ಡೇಟಾ",
+  "draft-orders-1-item": "(1 ಐಟಂ)",
+  "draft-orders-customer": "ಗ್ರಾಹಕ",
+  "draft-orders-edit-shipping-address": "ಶಿಪ್ಪಿಂಗ್ ವಿಳಾಸವನ್ನು ಸಂಪಾದಿಸಿ",
+  "draft-orders-edit-billing-address": "ಬಿಲಿಂಗ್ ವಿಳಾಸವನ್ನು ಸಂಪಾದಿಸಿ",
+  "draft-orders-go-to-customer": "ಗ್ರಾಹಕನಲ್ಲಿಗೆ ಹೋಗಿ",
+  "draft-orders-contact": "ಸಂಪರ್ಕಿಸಿ",
+  "draft-orders-billing": "ಬಿಲಿಂಗ್",
+  "draft-orders-raw-draft-order": "ಕಚೇಷ್ವರಾ ಡ್ರಾಫ್ಟ್ ಆದೇಶ",
+  "draft-orders-are-you-sure": "ನೀವು ಖಚಿತರಾ?",
+  "draft-orders-remove-resource-heading": "{{resource}} ಅನ್ನು ತೆಗೆಯಲು",
+  "draft-orders-remove-resource-success-text": "{{resource}} ನು ತೆಗೆದುಕೊಳ್ಳಲಾಗಿದೆ",
+  "draft-orders-this-will-create-an-order-mark-this-as-paid-if-you-received-the-payment": "ಈ ಒಪ್ಪಂದವು ಒಂದು ಆದೇಶವನ್ನು ಸೃಷ್ಟಿಸುವುದು. ಪಾವತಿಯನ್ನು ನೀವು ಸ್ವಿಕರಿಸಿದ್ದಾರೆಯೆಂದರೆ ಇದನ್ನು ಪಾವತಿ ಮಾಡಿ",
+  "draft-orders-mark-paid": "ಮಾರ್ಕ್ ಪೆಯಿಡ್",
+  "draft-orders-cancel": "ರದ್ದುಮಾಡಲಾಗಿದೆ",
+  "draft-orders-create-draft-order": "ಡ್ರಾಫ್ಟ್ ಆರ್ಡರ್ ರಚಿಸು",
+  "edit-amount-paid": "ಪಾವತಿಸಿದ ಮೊತ್ತ",
+  "edit-new-total": "ಹೊಸ ಒಟ್ಟು",
+  "edit-difference-due": "ವ್ಯತ್ಯಯ ಹೊರದು",
+  "edit-back": "ಹಿಂತಿರುಗು",
+  "edit-save-and-go-back": "ಉಳಿತಲು ಉಳಿತಲು ಉಳಿತಲು ಉಳಿತಲು ಉಳಿತಲು ಉಳಿತಲು",
+  "edit-order-edit-set-as-requested": "ಆರ್ಡರ್ ಸಂವಾದಕನಂತೆ ಹೊಂದಿಸಿ",
+  "edit-failed-to-request-confirmation": "ದೃಢೀಕರಣವನ್ನು ಅಂಗೀಕರಿಸಲು ವಿಫಲವಾಯಿತು",
+  "edit-added-successfully": "ಯಶಸ್ವಿಯಾಗಿ ಸೇರಿಸಲಾಗಿದೆ",
+  "edit-error-occurred": "ದೋಷ ನಡೆಯಿತು",
+  "edit-add-product-variants": "ಉತ್ಪನ್ನ ವ್ಯಾರಿಯಂಟ್ಗಳನ್ನು ಸೇರಿಸಿ",
+  "edit-edit-order": "ಆರ್ಡರ್ನ ಸಂಪಾದನೆ",
+  "edit-items": "ಐಟಂಗಳು",
+  "edit-add-items": "ಐಟಂಗಳನ್ನು ಸೇರಿಸಿ",
+  "edit-filter-items": "ಐಟಂಗಳನ್ನು ವಿಶೇಷಿಸಿ...",
+  "edit-note": "ಟಿಪ್ಪಣಿ",
+  "edit-add-a-note": "ಟಿಪ್ಪಣಿ ಸೇರಿಸಿ...",
+  "variants-table-location": "ಸ್ಥಳದಲ್ಲಿ {{location}}",
+  "edit-product": "ಉತ್ಪನ್ನ",
+  "edit-in-stock": "ಸ್ಟಾಕ್‌ನಲ್ಲಿ",
+  "edit-price": "ಬೆಲೆ",
+  "edit-products": "ಉತ್ಪನ್ನಗಳು",
+  "edit-search-product-variants": "ಉತ್ಪನ್ನ ವ್ಯಾರಿಯಂಟ್‌ಗಳನ್ನು ಹುಡುಕು...",
+  "orders-success": "ಯಶಸ್ವಿ",
+  "orders-successfully-initiated-export": "ಯಶಸ್ವಿಯಾಗಿ ನಿರ್ವಹಿಸಲಾಯಿತು",
+  "orders-error": "ದೋಷ",
+  "orders-export-orders": "ಆರ್ಡರ್ಗಳನ್ನು ನಿರ್ವಹಿಸು",
+  "components-billing-address": "ಬಿಲಿಂಗ್ ವಿಳಾಸ",
+  "components-use-same-as-shipping": "ಶಿಪಿಂಗ್ ಸ್ಥಿತಿಯನ್ನು ಉಪಯೋಗಿಸಿ",
+  "components-e-g-gift-wrapping": "ಉದಾಹರಣೆಗಾಗಿ ಉಡುಗೊರ ಸುತ್ತು",
+  "components-title": "ಶೀರ್ಷಿಕೆ",
+  "components-price": "ಬೆಲೆ",
+  "components-quantity": "ಪ್ರಮಾಣ",
+  "components-back": "ಹಿಂತಿರುಗು",
+  "components-add": "ಸೇರಿಸು",
+  "components-items-for-the-order": "ಆರ್ಡರ್ಗಾಗಿನ ಐಟಂಗಳು",
+  "components-details": "ವಿವರಗಳು",
+  "components-price-excl-taxes": "ಬೆಲೆ (ವರ್ಗಗಳು ಬಿದ್ದಿದೆ)",
+  "components-add-custom": "ವೈಶಿಷ್ಟಿಕ ಸೇರಿಸಿ",
+  "components-add-existing": "ಇತರ ಸೇರಿಸಿ",
+  "components-add-products": "ಉತ್ಪನ್ನಗಳನ್ನು ಸೇರಿಸಿ",
+  "components-add-custom-item": "ವೈಶಿಷ್ಟಿಕ ಐಟಂನ್ನು ಸೇರಿಸಿ",
+  "components-choose-region": "ಪ್ರದೇಶವನ್ನು ಆಯ್ಕೆಮಾಡಿ",
+  "components-region": "ಪ್ರದೇಶ",
+  "select-shipping-to-name": "({{name}}ಗೆ)",
+  "components-attention": "ಗಮನಿಸಿ!",
+  "components-no-options-for-orders-without-shipping": "ನೀವು ಶಿಪಿಂಗ್ ಇಲ್ಲದ ಆರ್ಡರ್ಗಳಿಗಾಗಿ ಯಾವುದೇ ಆಯ್ಕೆಗಳಿಲ್ಲ. ದಯವಿಟ್ಟು ಪ್ರದೇಶ ಸೆಟ್ಟಿಂಗ್ಗಳಲ್ಲಿ \"ವೆಬ್ಸೈಟ್ನಲ್ಲಿ ತೋರಿಸಿ\" ಚೆಕ್ ಅನ್ಚೆಕ್ ಮಾಡದೆ ಒಂದನ್ನು ಸೇರಿಸಿ (ಉದಾಹರಣೆಗೆ, \"ಇನ್‌ಸ್ಟೋರ್ ಫಿಲ್ಫಿಲ್ಮೆಂಟ್\").",
+  "components-choose-a-shipping-method": "ಒಂದು ಶಿಪಿಂಗ್ ವಿಧಾನವನ್ನು ಆಯ್ಕೆಮಾಡಿ",
+  "components-set-custom-price": "ವೈಶಿಷ್ಟಿಕ ಬೆಲೆಯನ್ನು ಹೊಂದಿಸಿ",
+  "components-custom-price": "ವೈಶಿಷ್ಟಿಕ ಬೆಲೆ",
+  "components-customer-and-shipping-details": "ಗ್ರಾಹಕ ಮತ್ತು ಶಿಪಿಂಗ್ ವಿವರಗಳು",
+  "components-find-existing-customer": "ಇತರ ಗ್ರಾಹಕನೊಂದಿಗೆ ಸಂವಾದಕನಿರಿ",
+  "components-email": "ಇಮೇಲ್",
+  "components-choose-existing-addresses": "ಇತರ ವಿಳಾಸಗಳನ್ನು ಆಯ್ಕೆಮಾಡಿ",
+  "components-create-new": "ಹೊಸದನ್ನು ರಚಿಸಿ",
+  "components-the-discount-is-not-applicable-to-the-selected-region": "ಆ ಕೊಡುಗು ಆಯ್ಕೆಮಾಡಿದ ಪ್ರದೇಶಕ್ಕೆ ಅನ್ವಯಿಸಲಾಗುತ್ತಿಲ್ಲ",
+  "components-the-discount-code-is-invalid": "ಕೊಡುಗು ಕೊಡುಗು ಕೊಡುಗು ಕೊಡುಗು ಕೊಡುಗು",
+  "components-add-discount": "ಕೊಡುಗು ಸೇರಿಸಿ",
+  "components-summer-10": "ಗ್ರೀಷ್ಮ 10",
+  "components-discount": "ಕೊಡುಗು",
+  "select-shipping-code": "(ಕೊಡುಗು: {{code}})",
+  "components-type": "ರೀತಿ",
+  "components-value": "ಮೌಲ್ಯ",
+  "components-address": "ವಿಳಾಸ",
+  "components-shipping-method": "ಶಿಪಿಂಗ್ ವಿಧಾನ",
+  "components-billing-details": "ಬಿಲಿಂಗ್ ವಿವರಗಳು",
+  "components-edit": "ಸಂಪಾದಿಸು",
+  "form-use-new-order-form-must-be-used-within-new-order-form-provider": "newOrderFormProvider ನಡೆಸಿಕೊಳ್ಳಬೇಕು",
+  "new-order-created": "ಆರ್ಡರ್ ರಚಿಸಲಾಗಿದೆ",
+  "new-create-draft-order": "ಡ್ರಾಫ್ಟ್ ಆರ್ಡರ್ ರಚಿಸು",
+  "price-list-product-filter-created-at": "ರಚಿಸಲಾಗಿದೆ",
+  "price-list-product-filter-updated-at": "ನವೀಕರಿಸಲಾಗಿದೆ",
+  "price-list-details-drawer-prompt-title": "ನೀವು ಖಚಿತವಾಗಿದ್ದೀರಾ?",
+  "price-list-details-drawer-prompt-description": "ನಿಮಗೆ ಉಳಿತಲು ಮಾಡದ ಬದಲಾವಣೆಗಳಿವೆ, ನೀವು ನಿರ್ಗತಿಸಲು ಇಚ್ಛಿಸುವುದು ಖಚಿತವಾಗಿದೆಯೇ?",
+  "price-list-details-notification-succes-title": "ಬೆಲೆ ಪಟ್ಟಿ ನವೀಕರಿಸಲಾಗಿದೆ",
+  "price-list-details-drawer-notification-success-message": "ಬೆಲೆ ಪಟ್ಟಿಯನ್ನು ಯಶಸ್ವಿಯಾಗಿ ನವೀಕರಿಸಲಾಗಿದೆ",
+  "price-list-details-drawer-notification-error-title": "ದೋಷ ನಡೆಯಿತು",
+  "price-list-details-drawer-title": "ಬೆಲೆ ಪಟ್ಟಿಯ ವಿವರಗಳನ್ನು ಸಂಪಾದಿಸಿ",
+  "price-list-details-drawer-cancel-button": "ರದ್ದುಗೊಳಿಸು",
+  "price-list-details-drawer-save-button": "ಉಳಿತಲು",
   "price-list-details-section-prompt-confirm-text": "Delete",
   "price-list-details-section-prompt-cancel-text": "Cancel",
   "price-list-details-section-prompt-title": "Delete price list",
