localized to kn

--- a/packages/admin-ui/ui/public/locales/kn/translation.json
+++ b/packages/admin-ui/ui/public/locales/kn/translation.json
@@ -1648,106 +1648,106 @@
   "overview-import-products": "ಉತ್ಪನ್ನಗಳನ್ನು ಆಮೋದಿಸಿ",
   "overview-export-products": "ಉತ್ಪನ್ನಗಳನ್ನು ಎಕ್ಸ್‌ಪೋರ್ಟ್ ಮಾಡಿ",
   "overview-new-product": "ಹೊಸ ಉತ್ಪನ್ನ",
-  "overview-new-collection": "New Collection",
-  "overview-success": "Success",
-  "overview-successfully-created-collection": "Successfully created collection",
-  "overview-error": "Error",
-  "overview-successfully-initiated-export": "Successfully initiated export",
-  "modals-add-sales-channels": "Add sales channels",
-  "modals-find-channels": "Find channels",
-  "modals-updated-the-api-key": "Updated the API key",
-  "modals-failed-to-update-the-api-key": "Failed to update the API key",
-  "modals-edit-api-key-details": "Edit API key details",
-  "modals-title": "Title",
-  "modals-name-your-key": "Name your key",
-  "modals-sales-channels-added-to-the-scope": "Sales channels added to the scope",
-  "modals-error-occurred-while-adding-sales-channels-to-the-scope-of-the-key": "Error occurred while adding sales channels to the scope of the key",
-  "modals-add-and-go-back": "Add and go back",
-  "modals-add-and-close": "Add and close",
-  "modals-sales-channels-removed-from-the-scope": "Sales channels removed from the scope",
-  "modals-error-occurred-while-removing-sales-channels-from-the-scope-of-the-key": "Error occurred while removing sales channels from the scope of the key",
-  "modals-edit-sales-channels": "Edit sales channels",
-  "publishable-api-keys-modals-manage-sales-channels-selected-with-counts_one": "{{count}}",
-  "publishable-api-keys-modals-manage-sales-channels-selected-with-counts_other": "{{count}}",
-  "modals-deselect": "Deselect",
-  "modals-remove": "Remove",
-  "modals-add-channels": "Add channels",
-  "modals-close": "Close",
-  "pages-sales-channels": "Sales channels",
-  "pages-connect-as-many-sales-channels-to-your-api-key-as-you-need": "Connect as many sales channels to your API key as you need.",
-  "pages-add-sales-channels": "Add sales channels",
-  "pages-edit-sales-channels": "Edit sales channels",
-  "pages-success": "Success",
-  "pages-created-a-new-api-key": "Created a new API key",
-  "pages-error": "Error",
-  "pages-failed-to-create-a-new-api-key": "Failed to create a new API key",
-  "pages-sales-channels-added-to-the-scope": "Sales channels added to the scope",
-  "pages-error-occurred-while-adding-sales-channels-to-the-scope-of-the-key": "Error occurred while adding sales channels to the scope of the key",
-  "pages-publish-api-key": "Publish API key",
-  "pages-create-api-key": "Create API Key",
-  "pages-create-and-manage-api-keys-right-now-this-is-only-related-to-sales-channels": "Create and manage API keys. Right now this is only related to sales channels.",
-  "pages-create-api-key-label": "Create API key",
-  "pages-back-to-settings": "Back to settings",
-  "pages-publishable-api-keys": "Publishable API keys",
-  "pages-these-publishable-keys-will-allow-you-to-authenticate-api-requests": "These publishable keys will allow you to authenticate API requests.",
-  "tables-name": "Name",
-  "tables-token": "Token",
-  "tables-done": "done",
-  "tables-copy-to-clipboard": "Copy to clipboard",
-  "tables-created": "Created",
-  "tables-status": "Status",
-  "tables-revoked": "Revoked",
-  "tables-live": "Live",
-  "tables-edit-api-key-details": "Edit API key details",
-  "tables-edit-sales-channels": "Edit sales channels",
-  "tables-copy-token": "Copy token",
-  "tables-revoke-token": "Revoke token",
-  "tables-delete-api-key": "Delete API key",
-  "tables-yes-delete": "Yes, delete",
-  "tables-api-key-deleted": "API key deleted",
-  "tables-are-you-sure-you-want-to-delete-this-public-key": "Are you sure you want to delete this public key?",
-  "tables-delete-key": "Delete key",
-  "tables-yes-revoke": "Yes, revoke",
-  "tables-api-key-revoked": "API key revoked",
-  "tables-are-you-sure-you-want-to-revoke-this-public-key": "Are you sure you want to revoke this public key?",
-  "tables-revoke-key": "Revoke key",
-  "tables-api-keys": "API Keys",
-  "tables-no-keys-yet-use-the-above-button-to-create-your-first-publishable-key": "No keys yet, use the above button to create your first publishable key",
-  "tables-title": "Title",
-  "tables-description": "Description",
-  "tables-no-added-sales-channels": "No added sales channels",
-  "tables-sales-channels": "Sales Channels",
-  "form-title": "Title",
-  "form-website-app-amazon-physical-store-pos-facebook-product-feed": "Website, app, Amazon, physical store POS, facebook product feed...",
-  "form-description": "Description",
-  "form-available-products-at-our-website-app": "Available products at our website, app...",
-  "form-success": "Success",
-  "form-the-sales-channel-is-successfully-updated": "The sales channel is successfully updated",
-  "form-error": "Error",
-  "form-failed-to-update-the-sales-channel": "Failed to update the sales channel",
-  "form-sales-channel-details": "Sales channel details",
-  "form-general-info": "General info",
-  "form-name": "Name",
-  "form-close": "Close",
-  "form-save": "Save",
-  "pages-draft": "Draft",
-  "pages-control-which-products-are-available-in-which-channels": "Control which products are available in which channels",
-  "pages-search-by-title-or-description": "Search by title or description",
-  "pages-confirm-delete-sales-channel": "Are you sure you want to delete this sales channel? The setup you made will be gone forever.",
-  "pages-delete-channel-heading": "Delete Channel",
-  "pages-edit-general-info": "Edit general info",
-  "pages-add-products": "Add products",
-  "pages-delete-channel": "Delete channel",
-  "pages-disabled": "Disabled",
-  "pages-enabled": "Enabled",
-  "tables-collection": "Collection",
-  "tables-start-building-your-channels-setup": "Start building your channels setup...",
-  "tables-no-products-in-channels": "You haven’t added any products to this channels yet, but once you do they will live here.",
-  "tables-add-products": "Add products",
-  "tables-details": "Details",
-  "tables-remove-from-the-channel": "Remove from the channel",
-  "tables-products": "Products",
-  "sales-channels-table-placeholder-selected-with-counts_one": "{{count}}",
+  "overview-new-collection": "ಹೊಸ ಸಂಗ್ರಹ",
+  "overview-success": "ಯಶಸ್ವಿ",
+  "overview-successfully-created-collection": "ಯಶಸ್ವಿಯಾಗಿ ಸಂಗ್ರಹ ರಚಿಸಲಾಯಿತು",
+  "overview-error": "ದೋಷ",
+  "overview-successfully-initiated-export": "ಯಶಸ್ವಿಯಾಗಿ ಎಕ್ಸ್‌ಪೋರ್ಟ್ ಪ್ರಾರಂಭಿಸಲಾಯಿತು",
+  "modals-add-sales-channels": "ಮಾರಾಟ ಚಾನಲ್‌ಗಳನ್ನು ಸೇರಿಸಿ",
+  "modals-find-channels": "ಚಾನಲ್‌ಗಳನ್ನು ಹುಡುಕಿ",
+  "modals-updated-the-api-key": "API ಕೀಲಿಯನ್ನು ನವೀಕರಿಸಲಾಯಿತು",
+  "modals-failed-to-update-the-api-key": "API ಕೀಲಿಯನ್ನು ನವೀಕರಿಸಲು ವಿಫಲವಾಯಿತು",
+  "modals-edit-api-key-details": "API ಕೀ ವಿವರಗಳನ್ನು ಸಂಪಾದಿಸಿ",
+  "modals-title": "ಶೀರ್ಷಿಕೆ",
+  "modals-name-your-key": "ನಿಮ್ಮ ಕೀಲಿಗೆ ಹೆಸರು ಕೊಡಿ",
+  "modals-sales-channels-added-to-the-scope": "ವಿಪಣಿ ಚಾನಲ್‌ಗಳನ್ನು ವಿಸ್ತರಿಸಲಾಗಿದೆ",
+  "modals-error-occurred-while-adding-sales-channels-to-the-scope-of-the-key": "ವಿಪಣಿ ಚಾನಲ್‌ಗಳನ್ನು ಕೀಲಿಯ ವಿಸ್ತರಣಾದಲಿ ಸಂಕಟ ಆಯಿತು",
+  "modals-add-and-go-back": "ಸೇರಿಸಿ ಮತ್ತು ಹಿಂತಿರುಗಿ",
+  "modals-add-and-close": "ಸೇರಿಸಿ ಮತ್ತು ಮುಚ್ಚಿ",
+  "modals-sales-channels-removed-from-the-scope": "ವಿಪಣಿ ಚಾನಲ್‌ಗಳು ವಿಸ್ತರಣಾದಿಂದ ತೆಗೆದಿದೆ",
+  "modals-error-occurred-while-removing-sales-channels-from-the-scope-of-the-key": "ವಿಪಣಿ ಚಾನಲ್‌ಗಳನ್ನು ಕೀಲಿಯ ವಿಸ್ತರಣಾದಿಂದ ತೆಗೆದುಕೊಳ್ಳಲು ದೋಷ ಆಯಿತು",
+  "modals-edit-sales-channels": "ಮಾರಾಟ ಚಾನಲ್‌ಗಳನ್ನು ಸಂಪಾದಿಸಿ",
+  "publishable-api-keys-modals-manage-sales-channels-selected-with-counts_one": "{{count}} ಮಾರಾಟ ಚಾನಲ್‌ಗಳನ್ನು ಆಯ್ಕೆಮಾಡಿದ್ದಾರೆ",
+  "publishable-api-keys-modals-manage-sales-channels-selected-with-counts_other": "{{count}} ಮಾರಾಟ ಚಾನಲ್‌ಗಳನ್ನು ಆಯ್ಕೆಮಾಡಿದ್ದಾರೆ",
+  "modals-deselect": "ಅಚ್ಚು ಮಾಡಿ",
+  "modals-remove": "ತೆಗೆದಿದ್ದು",
+  "modals-add-channels": "ಚಾನಲ್‌ಗಳನ್ನು ಸೇರಿಸಿ",
+  "modals-close": "ಮುಚ್ಚಿ",
+  "pages-sales-channels": "ಮಾರಾಟ ಚಾನಲ್‌ಗಳು",
+  "pages-connect-as-many-sales-channels-to-your-api-key-as-you-need": "ನೀವು ಬೇಕಾದರೆ ನಿಮ್ಮ API ಕೀಗೆ ಎಷ್ಟು ಮಾರಾಟ ಚಾನಲ್‌ಗಳನ್ನು ಸಂಪರ್ಕಿಸಬಹುದು.",
+  "pages-add-sales-channels": "ಮಾರಾಟ ಚಾನಲ್‌ಗಳನ್ನು ಸೇರಿಸಿ",
+  "pages-edit-sales-channels": "ಮಾರಾಟ ಚಾನಲ್‌ಗಳನ್ನು ಸಂಪಾದಿಸಿ",
+  "pages-success": "ಯಶಸ್ವಿ",
+  "pages-created-a-new-api-key": "ಹೊಸ API ಕೀ ರಚಿಸಲಾಯಿತು",
+  "pages-error": "ದೋಷ",
+  "pages-failed-to-create-a-new-api-key": "ಹೊಸ API ಕೀಯನ್ನು ರಚಿಸುವುದರಲ್ಲಿ ವಿಫಲವಾಯಿತು",
+  "pages-sales-channels-added-to-the-scope": "ಮಾರಾಟ ಚಾನಲ್‌ಗಳು ವಿಸ್ತರಣೆಗೆ ಸೇರಿಸಲಾಗಿದೆ",
+  "pages-error-occurred-while-adding-sales-channels-to-the-scope-of-the-key": "ಮಾರಾಟ ಚಾನಲ್‌ಗಳನ್ನು ಕೀಲಿಯ ವಿಸ್ತರಣಾದಲಿ ದೋಷವಾಯಿತು",
+  "pages-publish-api-key": "API ಕೀಯನ್ನು ಪ್ರಕಟಿಸಿ",
+  "pages-create-api-key": "API ಕೀ ರಚಿಸಿ",
+  "pages-create-and-manage-api-keys-right-now-this-is-only-related-to-sales-channels": "ಈಗ ನೀವು API ಕೀಗಳನ್ನು ರಚಿಸಿ ಮತ್ತು ನಿರ್ವಹಿಸಬಹುದು. ಈಗ ಇದು ನಿರಂತರ ಚಾನಲ್‌ಗಳಿಗೆ ಮಾತ್ರ ಸಂಬಂಧಪಟ್ಟದ್ದು.",
+  "pages-create-api-key-label": "API ಕೀಯನ್ನು ರಚಿಸಿ",
+  "pages-back-to-settings": "ಸೆಟ್ಟಿಂಗ್ಗಳಿಗೆ ಹಿಂತಿರುಗಿ",
+  "pages-publishable-api-keys": "ಪ್ರಕಟಯೋಗ್ಯ API ಕೀಗಳು",
+  "pages-these-publishable-keys-will-allow-you-to-authenticate-api-requests": "ಈ ಪ್ರಕಟಯೋಗ್ಯ ಕೀಗಳು ನೀವು API ವಿನೋದ ವಿನಂತಿಗಳನ್ನು ಪ್ರಾಮಾಣಿಕೀಕರಿಸಲು ಅನುಮತಿಸುತ್ತದೆ.",
+  "tables-name": "ಹೆಸರು",
+  "tables-token": "ಟೋಕನ್",
+  "tables-done": "ಮುಗಿದಿದೆ",
+  "tables-copy-to-clipboard": "ಕ್ಲಿಪ್‌ಬೋರ್ಡ್‌ಗೆ ನಕಲಿಸಿ",
+  "tables-created": "ರಚಿಸಲಾಯಿತು",
+  "tables-status": "ಸ್ಥಿತಿ",
+  "tables-revoked": "ರದ್ದುಮಾಡಿದೆ",
+  "tables-live": "ಜೀವಂತ",
+  "tables-edit-api-key-details": "API ಕೀವಿವರಗಳನ್ನು ಸಂಪಾದಿಸಿ",
+  "tables-edit-sales-channels": "ಮಾರಾಟ ಚಾನಲ್‌ಗಳನ್ನು ಸಂಪಾದಿಸಿ",
+  "tables-copy-token": "ಟೋಕನ್ ನಕಲಿಸಿ",
+  "tables-revoke-token": "ಟೋಕನ್ ರದ್ದುಮಾಡಿ",
+  "tables-delete-api-key": "API ಕೀಯನ್ನು ಅಳಿಸಿ",
+  "tables-yes-delete": "ಹೌದು, ಅಳಿಸಿ",
+  "tables-api-key-deleted": "API ಕೀ ಅಳಿಸಲಾಯಿತು",
+  "tables-are-you-sure-you-want-to-delete-this-public-key": "ನೀವು ಈ ಪ್ರಕಟ ಕೀಯನ್ನು ಅಳಿಸಲು ಖಂಡಿತವಾಗಿಯೂ ಬಯಸುತ್ತೀರಾ?",
+  "tables-delete-key": "ಕೀಯನ್ನು ಅಳಿಸಿ",
+  "tables-yes-revoke": "ಹೌದು, ರದ್ದುಮಾಡಿ",
+  "tables-api-key-revoked": "API ಕೀ ರದ್ದುಮಾಡಲಾಯಿತು",
+  "tables-are-you-sure-you-want-to-revoke-this-public-key": "ನೀವು ಈ ಪ್ರಕಟ ಕೀಯನ್ನು ಖಂಡಿತವಾಗಿಯೂ ರದ್ದುಮಾಡಲು ಬಯಸುತ್ತೀರಾ?",
+  "tables-revoke-key": "ಕೀಯನ್ನು ರದ್ದುಮಾಡಿ",
+  "tables-api-keys": "API ಕೀಗಳು",
+  "tables-no-keys-yet-use-the-above-button-to-create-your-first-publishable-key": "ಇನ್ನೂ ಯಾವ ಕೀಗಳೂ ಇಲ್ಲ. ನಿಮ್ಮ ಮೊದಲ ಪ್ರಕಟಯೋಗ್ಯ ಕೀಯನ್ನು ರಚಿಸಲು ಮೇಲೆತ್ತಿದ್ದ ಬಟನ್‌ಅನ್ನು ಬಳಸಿ.",
+  "tables-title": "ಶೀರ್ಷಿಕೆ",
+  "tables-description": "ವವರಣೆ",
+  "tables-no-added-sales-channels": "ಯಾವ ಮಾರಾಟ ಚಾನಲ್‌ಗಳನ್ನು ಸೇರಿಸಲಾಯಿತು ಇಲ್ಲ",
+  "tables-sales-channels": "ಮಾರಾಟ ಚಾನಲ್‌ಗಳು",
+  "form-title": "ಶೀರ್ಷಿಕೆ",
+  "form-website-app-amazon-physical-store-pos-facebook-product-feed": "ವೆಬ್‌ಸೈಟ್, ಆ್ಯಪ್, ಅಮೆಜಾನ್, ಭೌತಿಕ ಅಂಗಡಿ ಪಿಓಎಸ್, ಫೇಸ್‌ಬುಕ್ ಉತ್ಪಾದನ ಫೀಡ್...",
+  "form-description": "ವವರಣೆ",
+  "form-available-products-at-our-website-app": "ನಮ್ಮ ವೆಬ್‌ಸೈಟ್, ಆ್ಯಪ್...",
+  "form-success": "ಯಶಸ್ವಿ",
+  "form-the-sales-channel-is-successfully-updated": "ಮಾರಾಟ ಚಾನಲ್ ಯಶಸ್ವಿಯಾಗಿ ಸಂಪಾದಿಸಲಾಯಿತು",
+  "form-error": "ದೋಷ",
+  "form-failed-to-update-the-sales-channel": "ಮಾರಾಟ ಚಾನಲ್ ಸಂಪಾದಿಸುವದರಲ್ಲಿ ವಿಫಲವಾಯಿತು",
+  "form-sales-channel-details": "ಮಾರಾಟ ಚಾನಲ್ ವಿವರಗಳು",
+  "form-general-info": "ಸಾಮಾನ್ಯ ಮಾಹಿತಿ",
+  "form-name": "ಹೆಸರು",
+  "form-close": "ಮುಚ್ಚಿ",
+  "form-save": "ಉಳಿಸಿ",
+  "pages-draft": "ಮೂಲ",
+  "pages-control-which-products-are-available-in-which-channels": "ಯಾವ ಚಾನಲ್‌ಗಳಲ್ಲಿ ಯಾವ ಉತ್ಪಾದನಗಳನ್ನು ದೊರಕಿಸಬೇಕು ಎಂದು ನಿಯಂತ್ರಿಸಿ",
+  "pages-search-by-title-or-description": "ಶೀರ್ಷಿಕೆ ಅಥವಾ ವಿವರದಿಂದ ಹುಡುಕಿ",
+  "pages-confirm-delete-sales-channel": "ನೀವು ಖಂಡಿತವಾಗಿ ಈ ಮಾರಾಟ ಚಾನಲ್‌ಅನ್ನು ಅಳಿಸಲು ಬಯಸುತ್ತೀರಾ? ನೀವು ನೀವು ಮಾಡಿದ ಸೆಟಪ್ ಅನ್ನು ಶೂನ್ಯಮಾಡಲಾಗುತ್ತದೆ.",
+  "pages-delete-channel-heading": "ಚಾನಲ್ ಅಳಿಸಿ",
+  "pages-edit-general-info": "ಸಾಮಾನ್ಯ ಮಾಹಿತಿಯನ್ನು ಸಂಪಾದಿಸಿ",
+  "pages-add-products": "ಉತ್ಪಾದನಗಳನ್ನು ಸೇರಿಸಿ",
+  "pages-delete-channel": "ಚಾನಲ್ ಅಳಿಸಿ",
+  "pages-disabled": "ನಿಷೇಧಿಸಲಾಯಿತು",
+  "pages-enabled": "ಸಕ್ಷಮಗೊಳಿಸಲಾಯಿತು",
+  "tables-collection": "ಸಂಗ್ರಹ",
+  "tables-start-building-your-channels-setup": "ನಿಮ್ಮ ಚಾನಲ್‌ಗಳ ಸೆಟಪ್‌ಅನ್ನು ಪ್ರಾರಂಭಿಸಿ...",
+  "tables-no-products-in-channels": "ನೀವು ಇನ್ನೂ ಈ ಚಾನಲ್‌ಗಳಲ್ಲಿ ಯಾವ ಉತ್ಪಾದನಗಳನ್ನು ಸೇರಿಸಿಲ್ಲ, ಆದರೆ ನೀವು ಒಮ್ಮೆ ಸೇರಿಸಿದ್ದಾರೆವುದು ಇಲ್ಲ.",
+  "tables-add-products": "ಉತ್ಪಾದನಗಳನ್ನು ಸೇರಿಸಿ",
+  "tables-details": "ವಿವರಗಳು",
+  "tables-remove-from-the-channel": "ಚಾನಲ್ ಇಲ್ಲಿಂದ ತೆಗೆದುಕೊಳ್ಳಿ",
+  "tables-products": "ಉತ್ಪಾದನಗಳು",
+  "sales-channels-table-placeholder-selected-with-counts_one": "{{count}} ಆಯ್ಕೆಮಾಡಲಾಗಿದೆ",
   "sales-channels-table-placeholder-selected-with-counts_other": "{{count}}",
   "tables-remove": "Remove",
   "components-successfully-updated-currency": "Successfully updated currency",
