--- a/www/apps/docs/content/plugins/payment/stripe.mdx
+++ b/www/apps/docs/content/plugins/payment/stripe.mdx
@@ -284,7 +284,7 @@ client.carts.createPaymentSessions(cart.id)
     // check if stripe is selected
     const isStripeAvailable = cart.payment_sessions?.some(
       (session) => (
-        session.processor_id === "stripe"
+        session.provider_id === "stripe"
       )
     )
     if (!isStripeAvailable) {
@@ -293,7 +293,7 @@ client.carts.createPaymentSessions(cart.id)
 
     // select stripe payment session
     client.carts.setPaymentSession(cart.id, {
-      processor_id: "stripe",
+      provider_id: "stripe",
     }).then(({ cart }) => {
       setClientSecret(cart.payment_session.data.client_secret)
     })
