change icon of discount card

--- a/www/apps/docs/content/modules/overview.mdx
+++ b/www/apps/docs/content/modules/overview.mdx
@@ -145,7 +145,7 @@ Medusa's products configuration allows managing products of different types incl
   </LargeCard>
 
   <LargeCard
-    Icon={Icons['currency-dollar-solid']}
+    Icon={Icons['receipt-percent']}
     title='Discounts'
     action={{
       label: 'Learn more',
